examples/test-pods/envoy-test1-id.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-test1-id
  labels:
    app: envoy-control-plane
data:
  test1-id: |-
    kubernetes:
    - cluster_name: local_service1
      port: 8001
      selector:
        app: test-001
    - cluster_name: local_service2
      port: 8001
      selector:
        app: test-002

    - cluster_name: test-envoy-service
      port: 7000
      selector:
        app: envoy

    listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            stat_prefix: ingress_http
            codec_type: AUTO
            tracing: {}
            access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /dev/stdout
                log_format:
                  json_format:
                    protocol: "%PROTOCOL%"
                    duration: "%DURATION%"
                    response_code: "%RESPONSE_CODE%"
                    response_flags: "%RESPONSE_FLAGS%"
                    x_request_id: "%REQ(X-REQUEST-ID)%"
            rds:
              route_config_name: test
              config_source:
                resource_api_version: V3
                api_config_source:
                  api_type: GRPC
                  transport_api_version: V3
                  grpc_services:
                  - envoy_grpc:
                      cluster_name: xds_cluster
            http_filters:
            - name: envoy.filters.http.ratelimit
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                domain: test
                enable_x_ratelimit_headers: DRAFT_VERSION_03
                failure_mode_deny: false
                rate_limit_service:
                  transport_api_version: V3
                  grpc_service:
                    envoy_grpc:
                      cluster_name: rate_limit_cluster
            - name: envoy.filters.http.router
    endpoints:
    - cluster_name: local_service1
      endpoints:
      - priority: 1
        lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8000
    routes:
    - name: test
      virtual_hosts:
      - name: test
        domains:
        - "*"
        rate_limits:
        - actions:
          - header_value_match:
              descriptor_value: no-cf-connecting-ip
              expect_match: false
              headers:
              - name: "cf-connecting-ip"
        - actions:
          - request_headers:
              header_name: cf-connecting-ip
              descriptor_key: cf-connecting-ip
        retry_policy:
          retry_on: "cancelled,connect-failure,gateway-error,refused-stream,reset,resource-exhausted,unavailable"
          num_retries: 1
          retry_host_predicate:
          - name: "envoy.retry_host_predicates.previous_hosts"
          host_selection_retry_max_attempts: 5
        routes:
        - match:
            prefix: "/1"
          route:
            cluster: local_service1
        - match:
            prefix: "/2"
          route:
            cluster: local_service2
        - match:
            prefix: "/"
          route:
            weighted_clusters:
              clusters:
              - name: local_service1
                weight: 50
              - name: local_service2
                weight: 50
    clusters:
    - name: local_service1
      connect_timeout: 0.25s
      lb_policy: ROUND_ROBIN
      type: EDS
      eds_cluster_config:
        eds_config:
          resource_api_version: V3
          api_config_source:
            api_type: GRPC
            transport_api_version: V3
            grpc_services:
            - envoy_grpc:
                cluster_name: xds_cluster
    - name: local_service2
      connect_timeout: 0.25s
      circuit_breakers:
        thresholds:
        - max_retries: 10
      outlier_detection:
        consecutive_5xx: 5
        base_ejection_time: 30s
        max_ejection_percent: 50
        consecutive_gateway_failure: 5
      lb_policy: ROUND_ROBIN
      type: EDS
      eds_cluster_config:
        eds_config:
          resource_api_version: V3
          api_config_source:
            api_type: GRPC
            transport_api_version: V3
            grpc_services:
            - envoy_grpc:
                cluster_name: xds_cluster
    - name: rate_limit_cluster
      connect_timeout: 0.25s
      lb_policy: ROUND_ROBIN
      type: STRICT_DNS
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: rate_limit_cluster
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: envoy-ratelimit
                  port_value: 8081
